# pico-fun

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: dummy_pin.rs  main.rs
