[package]
edition = "2024"
name = "pico-fun"
version = "0.1.0"

[build-dependencies]
regex = "1.11.0"

[dependencies]
cortex-m = { git = "https://github.com/rust-embedded/cortex-m" }
cortex-m-rt = "0.7"
defmt = "1"
defmt-rtt = "1"
display-interface-spi = "0.4"
embedded-alloc = { git = "https://github.com/rust-embedded/embedded-alloc" }
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0.0"
embedded-hal-02 = { version = "0.2.0", package = "embedded-hal" }
embedded-hal-bus = "0.3.0"
heapless = "0.9.2"
mipidsi = "0.9.0"
mousefood = { git = "https://github.com/j-g00da/mousefood", default-features = false, features = [
    "fonts",
] }
panic-probe = { version = "1", features = ["print-defmt"] }
portable-atomic = { version = "1", default-features = false, features = [
    "critical-section",
] }
ratatui = { version = "0.30.0", default-features = false, features = [
    "portable-atomic",
] }
rp-binary-info = "0.1.1"
rp-pico = "0.9"

[patch.crates-io]
cortex-m = { git = "https://github.com/rust-embedded/cortex-m" }

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true        # Enables Link-time Optimization.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
# strip = true      # Ensures debug symbols are removed.
debug = true
