[package]
edition = "2024"
name = "pico-fun"
version = "0.1.0"

[dependencies]
cortex-m = { git = "https://github.com/rust-embedded/cortex-m" }
cortex-m-rt = "0.7"
defmt = "1"
defmt-rtt = "1"
display-interface-spi = "0.5"
embedded-alloc = { git = "https://github.com/rust-embedded/embedded-alloc" }
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-hal = "1.0.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.0" }
embedded-hal-bus = "0.3.0"
heapless = "0.9.2"
i2c-character-display = { version = "0.5.1", features = ["defmt"] }
mipidsi = "0.9.0"
mousefood = { git = "https://github.com/j-g00da/mousefood", default-features = false, features = [
    "fonts",
] }
panic-probe = { version = "1", features = ["print-defmt"] }
portable-atomic = { version = "1", default-features = false, features = [
    "critical-section",
] }
ratatui = { version = "0.30.0", default-features = false, features = [
    "portable-atomic",
] }
rp-binary-info = "0.1.1" # Behövs denna nu? Vad är kopplingen till rp235xhal/binary-info?
# rp-pico = "0.9"
ssd1306 = "0.10.0"
tinytga = "0.5.0"
rp235x-hal = { version = "0.3", features = [
    "rt",
    "critical-section-impl",
    "binary-info",
] }
fugit = "0.3.9"

[patch.crates-io]
cortex-m = { git = "https://github.com/rust-embedded/cortex-m" }

# cargo build/run
[profile.dev]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo build/run --release
[profile.release]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 2
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

[profile.release.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

# cargo test
[profile.test]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo test --release
[profile.bench]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 3
